# mindat-mobile

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
