[package]
name = "mindat-mobile"
version = "0.1.0"
description = "Mindat Mobile - Find mineral localities near you"
authors = ["Jason Kiniry <jason.kiniry@gmail.com>"]
edition = "2021"

[lib]
name = "mindat_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-geolocation = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mindat-rs = "0.1.0"

